Quick fix for hard to see popups.
Only the custom service map map style makes
the popup styles stand out. This is a temporary
solution for the other layers.

--- a/styles/popup.less
+++ b/styles/popup.less
@@ -1,3 +1,13 @@
+.guidemap,
+.ortographic {
+  .leaflet-popup.unit {
+    .leaflet-popup-content-wrapper {
+      background-color: white;
+      padding: 6px;
+    }
+  }
+}
+
 .leaflet-popup {
   font-family: @font-family-base;
   .leaflet-popup-content-wrapper.selected {
